added a debugger for printing an entire struct.

--- a/TODO
+++ b/TODO
@@ -1,3 +1,9 @@
 Implemnted file parser.
 
 now : Save textures, save colours, parse map and save into **map
+
+
+render issue
+
+just the south wall (blue)
+other walls seem fine
