--- a/TODO
+++ b/TODO
@@ -18,6 +18,12 @@ or if the player is outside
 1000001
 1111111
 
+Makefile:
+if minilibx-linux is empty --> delete empty folder before checking for folder
+
+MINIMAP
+need own image to scale it correctly
+// game->img.img = mlx_new_image(game->img.mlx, WIN_WIDTH, WIN_HEIGHT);
 
 
 #######################BACKUP#########################
