texture is correct calculated, added little offset that player dont go to close to a wall.

--- a/TODO.txt
+++ b/TODO.txt
@@ -23,3 +23,6 @@ MINIMAP:
 need own image to scale it correctly
 // game->img.img = mlx_new_image(game->img.mlx, WIN_WIDTH, WIN_HEIGHT);
 
+MALLOC:
+all free?
+
