--- a/TODO.txt
+++ b/TODO.txt
@@ -2,7 +2,7 @@
 #######  TODO  #######
 
 MAP:
-1. The map must be closed/surrounded by walls, if not the program must return
+1. The map must be closed/surrounded by walls, if not the program must return		// DONE
 an error.
 	Floodfill from Playerposition is nessessary
 	To check if there is a hole in the boundary
@@ -13,14 +13,15 @@ an error.
 1000001
 1111111
 
-2. Except for the map, each type of information from an element can be separated
+2. Except for the map, each type of information from an element can be separated	// DONE
 by one or more space(s).
 
 MAKEFILE:
-if minilibx-linux is empty --> delete empty folder before checking for folder		//DONE
+if minilibx-linux is empty --> delete empty folder before checking for folder		// DONE
 
 Texture file should be checked if file exist.
 	open file to check?
+	it is checked when we try to load it. shall we check it at beginning?
 
 MINIMAP:
 need own image to scale it correctly
@@ -33,3 +34,8 @@ BONUS:
 needs own rule in MAKEFILE
 	Minimap
 	wall collision
+		is it enough to add a offset to the wall?
+		if yes?
+			is DONE
+		else
+			TODO
